--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
             <!-- now the footer! -->
             
             <div class="footer1">
-                <div><img src="../IMAGES/logo_no_text.png" alt="penny juice, logo, pineapple, watermelon" width=200px height=220px>
+                <div><img src="logo_no_text.png" alt="penny juice, logo, pineapple, watermelon" width=200px height=220px>
                 <h5>IT MAKES <i>CENTS</i>!</h5>
             </div>
             </div>
