--- a/contact_us.html
+++ b/contact_us.html
@@ -8,7 +8,7 @@
         <meta name="keyphrases" content="it makes cents, in juice we trust, leader in childcare juice">
         <meta name="viewport" content="width=device width, intial-scale=1">
         
-        <link rel="stylesheet" href="../CSS/style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     
     <body>
