--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
                                 </ul>
                             </li>    
                             
-                            <li><a href="contact.html"><h3>CONTACT US</h3></a></li>
+                            <li><a href="contact_us.html"><h3>CONTACT US</h3></a></li>
                         </ul>
             
                 </div>
