--- a/index.html
+++ b/index.html
@@ -148,16 +148,16 @@
         </h3>
             <!-- now the footer! -->
             <div class="footer1">
-                <div><img src="../IMAGES/logo_no_text.png" alt="penny juice, logo, pineapple, watermelon" width=200px height=220px>
+                <div><img src="logo_no_text.png" alt="penny juice, logo, pineapple, watermelon" width=200px height=220px>
                 <h5>IT MAKES <i>CENTS</i>!</h5>
             </div>
             </div>
             
             <div class="flex-container5">
-                <div><img src="../IMAGES/social_fb.png" alt="facebook, logo" width=50px></div>
-                <div><img src="../IMAGES/social_twit.png" alt="twitter, logo" width=50px></div>
-                <div><img src="../IMAGES/social_ig.png" alt="instagram, logo" width=50px></div>
-                <div><img src="../IMAGES/social_yt.png" alt="youtube, logo" width=50px></div>
+                <div><img src="social_fb.png" alt="facebook, logo" width=50px></div>
+                <div><img src="social_twit.png" alt="twitter, logo" width=50px></div>
+                <div><img src="social_ig.png" alt="instagram, logo" width=50px></div>
+                <div><img src="social_yt.png" alt="youtube, logo" width=50px></div>
             </div>
             
             <div class="footer2">
