--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="bottombanner"></div>
         
             <div class="slider">
-                <div><img src="../IMAGES/boy_juice.png" alt="boy, drinking, juice, healthy, flavor"></div>
+                <div><img src="boy_juice.png" alt="boy, drinking, juice, healthy, flavor"></div>
             <!-- ^^ the alt tag, create SEO for the image"-->
         </div>
         
