--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 
             <div class="nav">
                         <ul>
-                            <li><a class="selected" href="index.html"> <img src="../IMAGES/pg_logo_transparent.png" alt="logo, penny juice" width=200px></a></li>
+                            <li><a class="selected" href="index.html"> <img src="pg_logo_transparent.png" alt="logo, penny juice" width=200px></a></li>
                             <li><a href="about.html"><h3>HOW TO USE</h3></a></li>
                             <li><a href="nutrition_compliance.html"><h3>NUTRITION & COMPLIANCE</h3></a>
                             <!--now nesting a DROP-DOWN beneath flavors-->
