--- a/contact.html
+++ b/contact.html
@@ -75,9 +75,9 @@ Please include your order number when reaching out to us.
            <!--  now 2 columns --> 
             <h3>  
             <div class="flex-container-orderstatus">
-                <div><br><br><br><a href="index.html"><img src="../IMAGES/tracking.png" alt="logo, penny juice" width=80px></a>
+                <div><br><br><br><a href="index.html"><img src="tracking.png" alt="logo, penny juice" width=80px></a>
                     <br><br><br>Track Order</div>
-                <div><br><br><br><a href="index.html"> <img src="../IMAGES/cancel_order.png" alt="logo, penny juice" width=80px></a>
+                <div><br><br><br><a href="index.html"> <img src="cancel_order.png" alt="logo, penny juice" width=80px></a>
                     <br><br><br>Change or Cancel Order</div>
             </div>
             </h3>
