--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
         <div class="breadcrumbs">
             <h7>Home</h7>
             <h8><span class="material-symbols-outlined">play_arrow</span></h8>
-            <h9> The Leader in Childcare Juice </h9>
+            <h9> How to Use </h9>
             </div>  
         
         <div class ="easytouse">
