--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML> 
 <html>
     <head>
-        <title>Penny Juice | It Makes Cents!</title>
+        <title>Penny Juice | How to Use</title>
 
         <meta charset="utf-8">
         <meta name="keywords" content="healthy, juice, kids, school, childcare, Las Vegas, concentrate, Penny Juice, nutrition, nutritious, organic, natural">
