--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
 <!-- Start WOWSlider.com BODY section -->
 <div id="wowslider-container1">
 <div class="ws_images"><ul>
-		<li><img src="data1/images/top_slider_01.png" alt="top_slider_02" title="" id="wows1_0" height=35px/></li>
-		<li><img src="data1/images/top_slider_02.png" alt="carousel jquery" title="" id="wows1_1" height=35px/></li>
-		<li><img src="data1/images/top_slider_03.png" alt="top_slider_01" title="" id="wows1_2" height=35px/></li>
+		<li><img src="top_slider_01.png" alt="top_slider_02" title="" id="wows1_0" height=35px/></li>
+		<li><img src="top_slider_02.png" alt="carousel jquery" title="" id="wows1_1" height=35px/></li>
+		<li><img src="top_slider_03.png" alt="top_slider_01" title="" id="wows1_2" height=35px/></li>
 	</ul></div>
 <div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.net">bootstrap image slider</a> by WOWSlider.com v9.0</div>
 <div class="ws_shadow"></div>
 </div>	
-<script type="text/javascript" src="engine1/wowslider.js"></script>
-<script type="text/javascript" src="engine1/script.js"></script>
+<script type="text/javascript" src="wowslider.js"></script>
+<script type="text/javascript" src="script.js"></script>
 <!-- End WOWSlider.com BODY section -->
 
 
