--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 <!-- Start WOWSlider.com BODY section -->
 <div id="wowslider-container1">
 <div class="ws_images"><ul>
-		<li><img src="top_slider_01.png" alt="top_slider_02" title="" id="wows1_0" height=35px/></li>
-		<li><img src="top_slider_02.png" alt="carousel jquery" title="" id="wows1_1" height=35px/></li>
-		<li><img src="top_slider_03.png" alt="top_slider_01" title="" id="wows1_2" height=35px/></li>
+		<li><img src="top_slider_01.png" alt="" title="" id="wows1_0" height=35px/></li>
+		<li><img src="top_slider_02.png" alt="" title="" id="wows1_1" height=35px/></li>
+		<li><img src="top_slider_03.png" alt="" title="" id="wows1_2" height=35px/></li>
 	</ul></div>
 <div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.net">bootstrap image slider</a> by WOWSlider.com v9.0</div>
 <div class="ws_shadow"></div>
