--- a/contact_us.html
+++ b/contact_us.html
@@ -241,7 +241,7 @@ Please include your order number when reaching out to us.
             
             <div class="footer2">
             <h6><br><br>
-                <a href="https://policies.hibuwebsites.com/privacy-policy">Privacy Policy</a>&emsp;|&emsp;<a href="https://policies.hibuwebsites.com/cookie-policy">Do Not Share My Information</a>&emsp;|&emsp;<a href="            https://policies.hibuwebsites.com/conditions-of-use">Conditions of Use</a>&emsp;|&emsp;<a href="       https://policies.hibuwebsites.com/infringement-policy">Notice and Take Down Policy</a>&emsp;|&emsp;<a href="https://policies.hibuwebsites.com/accessibility-statement">Website Accessibility Policy</a> <br><br>
+                <a href="https://policies.hibuwebsites.com/privacy-policy" target="_blank">Privacy Policy</a>&emsp;|&emsp;<a href="https://policies.hibuwebsites.com/cookie-policy" target="_blank">Do Not Share My Information</a>&emsp;|&emsp;<a href="https://policies.hibuwebsites.com/conditions-of-use" target="_blank">Conditions of Use</a>&emsp;|&emsp;<a href="       https://policies.hibuwebsites.com/infringement-policy" target="_blank">Notice and Take Down Policy</a>&emsp;|&emsp;<a href="https://policies.hibuwebsites.com/accessibility-statement" target="_blank">Website Accessibility Policy</a> <br><br>
            © 2024 The content on this website is owned by us and our licensors. Do not copy any content (including images) without our consent.<br><br><br>
             </h6>
             </div>
