--- a/contact_us.html
+++ b/contact_us.html
@@ -230,7 +230,7 @@ Please include your order number when reaching out to us.
              <!-- SOCIALS -->
             <div class="flex-container5">
                 <a href="https://facebook.com" target="_blank"><img src="social_fb.png" alt="facebook, logo" width=50px></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="https://twitter.com target="_blank""><img src="social_twit.png" alt="twitter, logo" width=50px></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="https://twitter.com target="_blank"><img src="social_twit.png" alt="twitter, logo" width=50px></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="https://instagram.com" target="_blank"><img src="social_ig.png" alt="instagram, logo" width=50px></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="https://youtube.com" target="_blank"><img src="social_yt.png" alt="youtube, logo" width=50px></a>
             </div>
